# simple-service

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
api/: db.py  main.py  main_test.py  models.py  schema.py
